--- a/style.css
+++ b/style.css
@@ -227,13 +227,6 @@ ul li a {
   }
 }
 
-/* end nitin add header  */
-
-/* #main {
-  width: 100%;
-  height: 100vh;
-} */
-
 .banner {
   position: relative;
   overflow: hidden;
@@ -269,6 +262,7 @@ ul li a {
     height: 50vh;
     object-fit: cover;
   }
+  
 }
 @media (max-width: 320px) {
   #left-s1{
@@ -336,25 +330,6 @@ ul li a {
   height: 100%;
   object-fit: cover;
 }
-
-/* #top {
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-} */
-
-/* #workingarea {
-  position: relative;
-  margin: 0 auto;
-  width: 80%;
-  height: 100vh;
-  max-width: 1920px;
-  border: 1px solid red;
-} */
-
 #hero {
   position: absolute;
   top: 50%;
@@ -1007,6 +982,7 @@ section5 button {
 }
 .v3s-parag0apg {
   text-align: center;
+  font-weight: 300;
   font-size: 21px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 0px 200px 0px;
@@ -1138,21 +1114,40 @@ section5 button {
 }
 
 /* testimonials end  */
-
+/* +++++++++ppc+++++++ */
 #s3-ppc-cont{
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 #s3-steps{
+  width: 25%;
+}
+#s3-steps2{
   width: 25%;
 }
 #s3-steps h3{
   color: #02a3e39e;
   font-size: 1.5rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  
+}
+#s3-steps2 h3{
+  color: #02a3e39e;
+  font-size: 1.5rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  
 }
 #s3-steps p{
   font-weight: 300;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  width: 90%;
+  font-size: 1.25rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+#s3-steps2 p{
+  font-weight: 300;
+  /* margin: 0 auto; */
   width: 90%;
   font-size: 1.25rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -1160,6 +1155,97 @@ section5 button {
 #s3-steps i{
   font-size: 2rem;
 }
+#s3-steps2 i{
+  font-size: 2rem;
+}
+
+
+/* ==end== */
+
+/* seo */
+#cover{
+  display: flex;
+  flex-direction: column;
+  background-color: #EDF9F8;
+  align-items: center;
+}
+#cover h2{
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 2.5rem;
+}
+#s3-seo-cards{
+  margin-top: 3rem;
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+#s3-seo-card{
+  height: 70vh;
+  width: 27%;
+  /* background-color: red; */
+  border-radius: 7px;
+  box-shadow: 0 0 5px lightgrey;
+}
+#s3-seo-card2{
+  margin-top: -1rem;
+  height: 75vh;
+  width: 27%;
+  background-color: #FEF4E8;
+  border-radius: 7px;
+  box-shadow: 0 0 5px lightgrey;
+}
+#s3-seo-img{
+  margin:2rem 0 ;
+}
+#s3-seo-img img{
+  height: 30vh;
+  width: auto;
+}
+#s3-seo-card h3{
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.7rem;
+}
+#s3-seo-card p{
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.2rem;
+  margin: 0.5rem 2rem;
+}
+#s3-seo-card2 h3{
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.7rem;
+}
+#s3-seo-card2 p{
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.2rem;
+  margin: 0.5rem 2rem;
+}
+#tiles{
+  margin-top: 3rem;
+  display: flex;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+#tile{
+  height: 40vh;
+  width: 27.5%;
+  /* background-color: #0078ff; */
+  border-radius: 7px;
+  box-shadow: 0px 1.5px 5px  lightgray;
+}
+#tile h3{
+  margin-top: 1rem;
+  font-family:Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+#tile img{
+  height: 30vh;
+  margin: 1rem auto;
+}
+/* end */
 .c1 {
   width: 100%;
   margin: auto;
@@ -1175,6 +1261,13 @@ section5 button {
   margin: auto;
   padding: 40px;
   background: #f0f7ff;
+  text-align: center;
+}
+.s3-seo-cards {
+  width: 100%;
+  margin: auto;
+  padding: 20px;
+  /* background: #f0f7ff; */
   text-align: center;
 }
 .services-page-cards {
@@ -1359,6 +1452,8 @@ section5 button {
 .footer {
   background-color: #ffffff;
   padding: 40px 20px;
+  /* text-align: left;
+  margin: 3rem; */
 }
 .footer-container {
   display: flex;
@@ -2094,6 +2189,42 @@ h1 {
 }
 
 @media (max-width: 768px) {
+  .get-in-touch{
+    display: none;
+  }
+  .cta-heading{
+    text-align: center;
+  }
+  .v3s-parag0apg{
+    padding: 0px 90px 0px;
+  }
+  #s3-card3{
+    width: 39%;
+    height: 250px;
+  }
+  #s3-card4{
+    width: 39%;;
+    height: 250px;
+  }
+  #s3-cards{
+    width: 100%;
+    row-gap: 3rem !important;
+    gap: 0rem;
+  }
+  #s3-card2{
+    width: 39%;;
+    height: 250px;
+  }
+  #s3-seo-card{
+    width: 70%;
+    height: auto;
+    padding-bottom: 1.5rem;
+  }
+  #s3-seo-card2{
+    width: 70%;
+    height: auto;
+    padding-bottom: 1.5rem;
+  }
   .Custom_section_page {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -2126,7 +2257,7 @@ h1 {
   }
 
   .s3-home-cards {
-    padding: 0%;
+    padding: 0 0 20px 0;
   }
 
   #services-page1-right img {
@@ -2137,33 +2268,42 @@ h1 {
   #c1-left h3 {
     margin: 1rem 1rem;
   }
-
+  
   #s3-card2 {
-    width: 100%;
+    width: 85%;
+    height: 350px;
   }
 
   #s3-card3 {
-    width: 100%;
+    width: 85%;
+    height: 350px;
   }
 
   #s3-card4 {
-    width: 100%;
+    width: 85%;
+    height: 350px;
   }
 
   #s3-card5 {
-    width: 100%;
+    width: 85%;
+    height: 350px;  
   }
 
   .v3s-parag0apg {
-    font-size: 17px;
-    line-height: 22px;
+    font-size: 18px;
+    line-height: 21px;
   }
 
   .v3s-heading {
     margin-top: 2rem;
     font-size: 30px;
+    padding: 0 0.5rem;
   }
-
+  .accordion-question {
+    line-height: 2;
+    font-size: 18px;
+    font-weight: 500;
+}
   .Custom_section_page {
     padding: 10px;
   }
@@ -2230,7 +2370,22 @@ h1 {
   text-align: center;
   padding: 10px;
 }
+#s1-img-container{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0 50px 0;
+  margin-top: -34rem;
 
+}
+#image-left img{
+  height: 69vh;
+  width: 90%;
+}
+#image-right img{
+  height: 69vh;
+  width: 100%;
+
+}
 .banner-section-serc-page {
   /* margin-top: 35px; */
   font-family: Arial, sans-serif;
@@ -2238,7 +2393,7 @@ h1 {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-image: url(assest/service-banner.png);
+  /* background-image: url(assest/service-banner.png); */
   /* Replace with actual image path */
   background-size: cover;
   background-position: top;
@@ -2274,6 +2429,7 @@ h1 {
 /* CTA Button */
 .cta-button {
   display: inline-block;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #03a4e3;
   color: #fff;
   font-size: clamp(1rem, 2vw, 1.2rem);
@@ -2290,6 +2446,53 @@ h1 {
 
 /* Responsive Adjustments */
 @media (max-width: 768px) {
+  #s1-content{
+    display: flex;
+  }
+  #s2-content{
+    display: flex;
+  }
+  #s3-content{
+    display: flex;
+  }
+  .rvenue-heading{
+    /* justify-content: center; */
+    width: 170px;
+  }
+  .grid-item{
+    padding: 10px;
+    width: 320px;
+  }
+  .grid-item h3{
+    text-align: left;
+    font-size: 1.7rem;
+  }
+  .grid-item p{
+    font-size: 1.3rem;
+  }
+  #s4-content{
+    display: flex;
+  }
+  .second {
+    background-color: #fff;
+    margin-top: 0vh;
+    z-index: 999;
+  }
+  #line2{
+    width: 110vh;
+  }
+  #line3{
+    width: 110vh;
+  }
+  #line4{
+    width: 110vh;
+  }
+  #line5{
+    width: 110vh;
+  }
+  .second img {
+    display: none;
+  }
   .cta-section {
     padding: 30px;
   }
@@ -2302,16 +2505,246 @@ h1 {
     font-size: 1rem;
     padding: 12px 20px;
   }
+  #s3-ppc-cont{
+    gap: 2rem;
+  }
+  #s3-steps{
+    width: 100%;
+  }
+  #s3-steps p{
+    width: 100%;
+    padding: 1rem 2rem;
+  }
+  .banner-section-serc-page{
+    margin-top: 180px;
+    background-image: none;
+    min-height: auto;
+  }
+  #image-left img{
+    display: none;
+    margin-top: 0;
+    height: 20%;
+    width: 100%;
+  }
+  #s1-img-container{
+    margin-top: 0;
+  }
+  .accordion-question{
+    text-align: left;
+  }
 }
 
 @media (max-width: 480px) {
-  .cta-heading {
-    font-size: 1.6rem;
+  .get-in-touch{
+    display: none;
   }
+  #image-right img{
+    margin-top: 0;
+    height: 100%;
+    width: 90%;
+    margin-left: 5%;
+    align-self: center;
+  }
+  #s3-seo-img img {
+    height: 20vh;
+  }
+  #s1-content{
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #s2-content{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #s3-content{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #s4-content{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .grid-item{
+    width: auto;
+  }
+  .rvenue-heading{
+    width: auto;
+  }
+  .expertise-section h2 {
+    font-size: 30px;
+    padding: 0 0.5rem;
+  }
+  .expertise-container{
+    padding: 0px 10px 20px 10px;
+  }
+  .expert-card{
+    display: flex;
+    /* flex-wrap: wrap; */
+  }
+  #cover{
+    padding: 0.5rem;
+  }
+  #cover h2{
+    margin: 0.5rem;
+    font-size: 30px;
+  }
+  .expertise-left h3{
+    text-align: left;
+  }
+  .expertise-left p{
+    text-align: left;
+  }
+  .sec-2-three-link{
+    flex-direction: column;
+  }
+  .c1{
+    padding: 0 0 40px 0;
+  }
+  #s3-seo-card2{
+    margin: 0;
+  }
+  .expertise-right{
+    width: 90%;
+  }
+  .sec4-logos-heading{
+    font-size: 30px;
+    margin: 0.5rem;
+  }
+  .second img{
+    display: block;
+  }
+  section1 img{
+    display: none !important;
+  }
+  .slider-container{
+    padding: 10px 20px;
+  }
+  .photo1_section{
+    width: 42%;
+  }
+  .logos{
+    display: none;
+  }
+  .expertise-cards{
+    display: flex;
+  }
+  .S1{
+    padding: 0px 20px 100px 20px;
+  }
+  .prev-btn, .next-btn{
+    bottom: 0;
+    top: auto;
+  }
+  .case-heading{
+    font-size: 30px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    padding: 20px 0px 0px 0px;
+  }
+  .text1_sect p{
+    font-size: 1.3rem;
+    text-align: left;
+    line-height: 1.5;
+  }
+  .Cards_Result{
+    flex-direction: column;
+  }
+  .Content_image{
+    flex-direction: column;
+  }
+  .text1_sect{
+    max-width: fit-content;
+  }
+  .v3s-heading{
+    /* padding: 1rem; */
+  }
+  .cta-heading {
+    font-size: 1.9rem !important;
+    text-align: center;
+  }
+  #s3-card1{
+    flex-direction: column;
+  }
+  #c1-right img{
+    height: 150px;
+  }
+  #s3-card2{
+    width: 100%;
+  }
+  #s3-card3{
+    width: 100%;
+  }
+  #s3-card4{
+    width: 100%;
+  }
+  #s3-card5{
+    width: 100%;
+  }
+  .testimonials-container{
+    width: 90%;
+  }
+  .testimonial-card p{
+    font-size: 1.1rem;
+  }
+  .testimonial-card h3{
+    font-size: 1.2rem;
 
+  }
+  #line2{
+    width: 100%;
+  }
+  #line3{
+    width: 100%;
+  }
+  #line4{
+    width: 100%;
+  }
+  #line5{
+    width: 100%;
+  }
   .cta-button {
     width: 100%;
     text-align: center;
     padding: 14px;
+  }
+
+  #s3-seo-card{
+    width: auto;
+    height: auto;
+    padding:0 0.5rem 1rem 0.5rem;
+  }
+  #s3-seo-card2{
+    width: auto;
+    height: auto;
+    padding:0 0.5rem 1rem 0.5rem;
+  }
+  #s3-ppc-cont{
+    gap: 2rem;
+  }
+  #s3-steps{
+      width: auto;
+      text-align: left;
+      margin: 0 0.5rem;
+      padding: 0rem 2rem;
+  }
+  #s3-steps2{
+      width: auto;
+      text-align: left;
+      margin: 0 0.5rem;
+      padding: 0rem 2rem;
+  }
+  #s3-steps p{
+    width: 100%;
+    padding: 0;
+  }
+  #s3-steps2 p{
+    width: 100%;
+    padding: 0;
+  }
+}
+@media (max-width: 320px){
+  .v3s-parag0apg{
+    font-size: 20px;
+    line-height: 30px;
   }
 }
